--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,10 @@
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(2, 1fr);
-  height: 1900px;
+  /* height: 1900px; */
   margin-top: 35px;
   grid-gap: 30px;
+  column-gap: 200px;
 }
 
 .main {
@@ -325,25 +326,210 @@
   color: var(--black);
 }
 
-.footer-list2-mass{
+.footer-list2-mass {
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: 0.14px;
   color: #525252;
-  
+
 }
-.footer-list2{
+
+.footer-list2 {
   margin-bottom: 150px;
 }
 
-@media (max-width:992px) 
-{
-  .container{
+.footer-list1 {
+  position: relative;
+}
+
+.footer-list1::after {
+  display: flex;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 1px;
+  background: #F0F0F0;
+  bottom: -65px;
+}
+
+.navbar-menu__btn {
+  width: 50px;
+  height: 50px;
+  /* display: flex; */
+  border: none;
+  background-color: transparent;
+  display: none;
+}
+
+.navbar-menu__btn img {
+  width: 100%;
+}
+
+@media (max-width:1200px) {
+  .main-content {
+    grid-gap: 30px;
+    column-gap: none;
+  }
+}
+
+@media (max-width:992px) {
+  .container {
     padding: 0 15px;
   }
 }
-@media (max-width:768px)
- {
-  
+
+@media (max-width:768px) {
+  .main-content {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .card {
+    margin: 0 auto;
+  }
+
+  .section1-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section1-container div {
+    width: 100%;
+  }
+
+  .section1-container-div1 {
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .footer-list {
+    flex-direction: column;
+    row-gap: 100px;
+  }
+
+  .email-banner__text h1 {
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 50px;
+    text-align: center;
+    letter-spacing: 2.56px;
+    color: var(--black);
+    max-width: 638px;
+  }
+
+  .email-banner__text a {
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: 1.2px;
+    color: var(--black);
+  }
+
+  .email-banner__text {
+    height: 100%;
+  }
+
+  .email-banner {
+    height: 400px;
+  }
+
+  .section1-container-div1 p,
+  .section1-container-div2 p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    letter-spacing: 0.28px;
+    color: var(--black);
+  }
+
+  .navbar-logo {}
+
+  .navbar-menu__btn {
+    display: flex;
+  }
+
+  .navbar-list {
+    max-width: 250px;
+    width: 100%;
+    background: #757575;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    display: flex;
+    transform: translateX(-100%);
+    transition: all 1s;
+    z-index: 100;
+    row-gap: 50px;
+    /* justify-content: center; */
+
+    align-items: center;
+  }
+
+  .navbar-list a {
+    color: #F0F0F0;
+  }
+
+  .navbar-hamburger:hover .navbar-list {
+    transform: translateX(0);
+  }
+
+  .header-me h1,
+  .header-me h2 {
+    max-width: 877px;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 45px;
+    letter-spacing: 2.56px;
+    color: #000000;
+  }
+
+  .main {
+    margin-top: 80px;
+  }
+
+  .section {
+    margin-top: 120px;
+  }
+
+  .section img {
+    margin-top: 100px;
+  }
+
+  .section2 {
+    margin-top: 100px;
+  }
+
+  .section3 {
+    margin-top: 150px;
+  }
+
+  .footer {
+    margin-top: 120px;
+  }
+}
+
+@media (max-width:360px) {
+  .header-me h1,
+  .header-me h2 {
+    max-width: 877px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 2.56px;
+    color: #000000;
+  }
+  .card1{
+    max-height: 600px;
+  }
+  .card2{
+    max-height: 600px;
+  }
+  .card1 a img{
+    height:80%;
+  }
 }
